# Command-Line-Game

./: .gitignore  CLineGame.cpp  CMakeLists.txt  Makefile  README.md  clg.cpp
.github/workflows/: c-cpp.yml  clg.yml
RPG/: enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp
include/: CMakeLists.txt  eattack.hpp  emove.hpp  ename.hpp  entity.hpp  mainmenu.hpp  rpg.hpp  rpgbattle.hpp
src/: CMakeLists.txt  clg.cpp  entity.cpp  rpg.cpp  rpgbattle.cpp
src/objects/: entity.cpp
tests/: CMakeLists.txt  test.cpp  test.hpp
